<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalActivity">

    <TextView
        android:id="@+id/textViewDespesas"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/despesas"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textViewValor"
        android:layout_width="52dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/valor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDespesas"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/editTextValor"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValor"
        android:layout_marginLeft="16dp" />

    <RadioGroup
        android:id="@+id/RadioGroupSituacao"
        android:layout_width="143dp"
        android:layout_height="97dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/editTextValor"
        app:layout_constraintTop_toBottomOf="@+id/editTextValor">

        <RadioButton
            android:id="@+id/radioButtonPendente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pendente" />

        <RadioButton
            android:id="@+id/radioButtonPaga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paga" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBoxLazer"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/lazer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupSituacao"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/checkBoxAlimentacao"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/alimentacao"
        app:layout_constraintStart_toEndOf="@+id/checkBoxLazer"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupSituacao"
        android:layout_marginLeft="4dp" />

    <CheckBox
        android:id="@+id/checkBoxCasa"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/casa"
        app:layout_constraintStart_toEndOf="@+id/checkBoxAlimentacao"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupSituacao"
        android:layout_marginLeft="4dp" />

    <CheckBox
        android:id="@+id/checkBoxFeira"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/feira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxCasa"
        app:layout_constraintTop_toBottomOf="@+id/RadioGroupSituacao"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp" />

    <Spinner
        android:id="@+id/spinnerContas"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLazer"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/salvar"
        app:layout_constraintStart_toEndOf="@+id/buttonLimpar"
        app:layout_constraintTop_toBottomOf="@+id/spinnerContas"
        android:layout_marginLeft="52dp" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="48dp"
        android:onClick="limparCampos"
        android:text="@string/limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerContas"
        android:layout_marginLeft="96dp" />

</androidx.constraintlayout.widget.ConstraintLayout>